<resources>
    <string name="app_name">MyContactList</string>
    <string name="contact_icon">Contacts</string>
    <string name="settings_icon">Settings</string>
    <string name="map">Map</string>
    <string name="save_button">Save</string>
    <string name="contact">Contact:</string>
    <string name="address">Address:</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="email">EMail:</string>
    <string name="birthday">Birthday:</string>
    <string name="home">Home:</string>
    <string name="cell">Cell:</string>
    <string name="delete">Delete</string>

</resources>
