<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_contact"
    tools:context=".ContactActivity">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" />

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/toolbar_background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_button"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/navbar_background">


        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toStartOf="@id/imageButtonMap"
            android:layout_toLeftOf="@id/imageButtonMap"
            android:src="@drawable/baseline_perm_contact_calendar_black_24"
            android:contentDescription="@string/contact_icon"/>

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_map_black_24"
            android:contentDescription="@string/map"/>

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/imageButtonMap"
            android:layout_toRightOf="@id/imageButtonMap"
            android:src="@drawable/baseline_settings_applications_black_24"
            android:contentDescription="@string/settings_icon"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/navbar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/contact" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:ems="14"
                android:inputType="textCapWords"
                android:layout_below="@id/textContact"
                android:imeOptions="actionNext"
                android:background="@color/data_entry"
                android:layout_toLeftOf="@+id/imageContact"
                android:layout_toStartOf="@+id/imageContact"/>
                <requestFocus />

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editName"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/address" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAddress"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:ems="15"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:background="@color/data_entry" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editAddress"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:nextFocusDown="@+id/editState"
                android:background="@color/data_entry"/>

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/editCity"
                android:layout_toEndOf="@id/editCity"
                android:layout_toRightOf="@id/editCity"
                android:ems="2"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                android:nextFocusDown="@+id/editZipcode"
                android:background="@color/data_entry"/>

            <EditText
                android:id="@+id/editZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/editState"
                android:layout_toRightOf="@id/editState"
                android:ems="5"
                android:inputType="numberSigned"
                android:maxLength="5"
                android:nextFocusDown="@+id/editPhone"
                android:background="@color/data_entry"/>

            <TextView
                android:id="@+id/textHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editCity"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/home_phone" />

            <TextView
                android:id="@+id/textCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/editCell"
                android:layout_alignLeft="@+id/editCell"
                android:layout_alignBottom="@id/textHome"
                android:text="@string/cell_phone" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textHome"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:ems="7"
                android:inputType="phone"
                android:maxLength="14"
                android:nextFocusDown="@+id/editCell"
                android:background="@color/data_entry"/>

            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/editPhone"
                android:layout_marginTop="228dp"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@id/editPhone"
                android:layout_toRightOf="@id/editPhone"
                android:ems="7"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:nextFocusDown="@+id/editEMail"
                android:background="@color/data_entry"/>

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editPhone"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15sp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editEMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textEmail"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:ems="13"
                android:inputType="textEmailAddress"
                android:background="@color/data_entry"/>

            <TextView
                android:id="@+id/textBday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editEMail"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/textBday"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/textBday"
                android:text="01/01/1970" />

            <Button
                android:id="@+id/btnBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textBirthday"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="Change" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_below="@id/textBday"
                android:text="CheckBox" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageContact"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignTop="@+id/textContact"
                android:src = "@drawable/photoicon"/>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>