<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_contact_settings"
    tools:context=".ContactSettingsActivity">
    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/navbar_background">


        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toStartOf="@id/imageButtonMap"
            android:layout_toLeftOf="@id/imageButtonMap"
            android:src="@drawable/baseline_perm_contact_calendar_black_24"
            android:contentDescription="@string/contact_icon"/>

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_map_black_24"
            android:contentDescription="@string/map"/>

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/imageButtonMap"
            android:layout_toRightOf="@id/imageButtonMap"
            android:src="@drawable/baseline_settings_applications_black_24"
            android:contentDescription="@string/settings_icon"/>


    </RelativeLayout>
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/navbar" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sort Contacts By:"
        android:id="@+id/textContactSort"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textContactSort"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:id="@+id/radioGroupSortBy">

        <RadioButton
            android:id="@+id/radioName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radioCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radioBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Birthday"
            android:layout_weight="1"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sort Order:"
        android:id="@+id/textViewSortOrder"
        android:layout_below="@id/radioGroupSortBy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSortOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:id="@+id/radioGroupSortOrder">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ascending"
            android:id="@+id/radioAscending"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descending"
            android:id="@+id/radioDescending"
            android:layout_weight="1"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Background:"
        android:id="@+id/textViewBackgroundColor"
        android:layout_below="@id/radioGroupSortOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>
    <RadioGroup
        android:id="@+id/radioGroupBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewBackgroundColor"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Red" />
        <RadioButton
            android:id="@+id/radioBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Blue" />
        <RadioButton
            android:id="@+id/radioPurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Purple" />
        <RadioButton
            android:id="@+id/radioGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Grey" />
        <RadioButton
            android:id="@+id/radioOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Orange" />
        <RadioButton
            android:id="@+id/radioYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yellow" />
    </RadioGroup>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>